--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,23 +1,27 @@
 name: CI
 
- on: [push]
+on: [push]
 
- jobs:
+jobs:
+  sast_scan:
+    name: Run SAST with Bandit
+    runs-on: ubuntu-latest
 
- sast_scan:
- name: checkOut code
- uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
- name: set ou Python
- uses: actions/setup-python@v2
-with: 
-python-version: 3.8
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-name: Install Bandit
-run: pip install bandit
+      - name: Install Bandit
+        run: pip install bandit
 
-name: Run Bandit Scan
-run: bandit -r .
+      - name: Run Bandit Scan
+        run: bandit -r .
+
  
  
 
